--- a/video section.html
+++ b/video section.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="videos section.css">
   </head>
   <body>
+    <section class="category-sesction">
+      <!-- button.category{Categor $}*10 -->
+      <button class="category">Category 1</button>
+      <button class="category">Category 2</button>
+      <button class="category">Category 3</button>
+      <button class="category">Category 4</button>
+      <button class="category">Category 5</button>
+      <button class="category">Category 6</button>
+      <button class="category">Category 7</button>
+      <button class="category">Category 8</button>
+      <button class="category">Category 9</button>
+      <button class="category">Category 10</button>
+    </section>
     <div class="videos">
       <section class="video-section">
         <article class="video-container">
@@ -34,8 +47,6 @@
             </div>
           </div>
         </article>
-      </section>
-      <section class="video-section">
         <article class="video-container">
           <a href="#" class="thumbnail">
             <img
@@ -61,8 +72,6 @@
             </div>
           </div>
         </article>
-      </section>
-      <section class="video-section">
         <article class="video-container">
           <a href="#" class="thumbnail">
             <img
@@ -88,8 +97,206 @@
             </div>
           </div>
         </article>
-      </section>
-      <section class="video-section">
+        <article class="video-container">
+          <a href="#" class="thumbnail">
+            <img
+              class="thumbnail-image"
+              src="http://unsplash.it/250/150?gravity-center"
+            />
+          </a>
+          <div class="video-bottom-section">
+            <a href="#">
+              <img
+                class="channel-icon"
+                src="http://unsplash.it/36/36?gravity-center"
+              />
+            </a>
+            <div class="video-details">
+              <a href="#" class="video-title">Video Title</a>
+              <a href="#" class="video-channel-name">Channel Name</a>
+              <div class="video-matadata">
+                <span>12k views</span>
+                •
+                <span>1 week ago</span>
+              </div>
+            </div>
+          </div>
+        </article>
+        <article class="video-container">
+          <a href="#" class="thumbnail">
+            <img
+              class="thumbnail-image"
+              src="http://unsplash.it/250/150?gravity-center"
+            />
+          </a>
+          <div class="video-bottom-section">
+            <a href="#">
+              <img
+                class="channel-icon"
+                src="http://unsplash.it/36/36?gravity-center"
+              />
+            </a>
+            <div class="video-details">
+              <a href="#" class="video-title">Video Title</a>
+              <a href="#" class="video-channel-name">Channel Name</a>
+              <div class="video-matadata">
+                <span>12k views</span>
+                •
+                <span>1 week ago</span>
+              </div>
+            </div>
+          </div>
+        </article>
+        <article class="video-container">
+          <a href="#" class="thumbnail">
+            <img
+              class="thumbnail-image"
+              src="http://unsplash.it/250/150?gravity-center"
+            />
+          </a>
+          <div class="video-bottom-section">
+            <a href="#">
+              <img
+                class="channel-icon"
+                src="http://unsplash.it/36/36?gravity-center"
+              />
+            </a>
+            <div class="video-details">
+              <a href="#" class="video-title">Video Title</a>
+              <a href="#" class="video-channel-name">Channel Name</a>
+              <div class="video-matadata">
+                <span>12k views</span>
+                •
+                <span>1 week ago</span>
+              </div>
+            </div>
+          </div>
+        </article>
+        <article class="video-container">
+          <a href="#" class="thumbnail">
+            <img
+              class="thumbnail-image"
+              src="http://unsplash.it/250/150?gravity-center"
+            />
+          </a>
+          <div class="video-bottom-section">
+            <a href="#">
+              <img
+                class="channel-icon"
+                src="http://unsplash.it/36/36?gravity-center"
+              />
+            </a>
+            <div class="video-details">
+              <a href="#" class="video-title">Video Title</a>
+              <a href="#" class="video-channel-name">Channel Name</a>
+              <div class="video-matadata">
+                <span>12k views</span>
+                •
+                <span>1 week ago</span>
+              </div>
+            </div>
+          </div>
+        </article>
+        <article class="video-container">
+          <a href="#" class="thumbnail">
+            <img
+              class="thumbnail-image"
+              src="http://unsplash.it/250/150?gravity-center"
+            />
+          </a>
+          <div class="video-bottom-section">
+            <a href="#">
+              <img
+                class="channel-icon"
+                src="http://unsplash.it/36/36?gravity-center"
+              />
+            </a>
+            <div class="video-details">
+              <a href="#" class="video-title">Video Title</a>
+              <a href="#" class="video-channel-name">Channel Name</a>
+              <div class="video-matadata">
+                <span>12k views</span>
+                •
+                <span>1 week ago</span>
+              </div>
+            </div>
+          </div>
+        </article>
+        <article class="video-container">
+          <a href="#" class="thumbnail">
+            <img
+              class="thumbnail-image"
+              src="http://unsplash.it/250/150?gravity-center"
+            />
+          </a>
+          <div class="video-bottom-section">
+            <a href="#">
+              <img
+                class="channel-icon"
+                src="http://unsplash.it/36/36?gravity-center"
+              />
+            </a>
+            <div class="video-details">
+              <a href="#" class="video-title">Video Title</a>
+              <a href="#" class="video-channel-name">Channel Name</a>
+              <div class="video-matadata">
+                <span>12k views</span>
+                •
+                <span>1 week ago</span>
+              </div>
+            </div>
+          </div>
+        </article>
+        <article class="video-container">
+          <a href="#" class="thumbnail">
+            <img
+              class="thumbnail-image"
+              src="http://unsplash.it/250/150?gravity-center"
+            />
+          </a>
+          <div class="video-bottom-section">
+            <a href="#">
+              <img
+                class="channel-icon"
+                src="http://unsplash.it/36/36?gravity-center"
+              />
+            </a>
+            <div class="video-details">
+              <a href="#" class="video-title">Video Title</a>
+              <a href="#" class="video-channel-name">Channel Name</a>
+              <div class="video-matadata">
+                <span>12k views</span>
+                •
+                <span>1 week ago</span>
+              </div>
+            </div>
+          </div>
+        </article>
+        <article class="video-container">
+          <a href="#" class="thumbnail">
+            <img
+              class="thumbnail-image"
+              src="http://unsplash.it/250/150?gravity-center"
+            />
+          </a>
+          <div class="video-bottom-section">
+            <a href="#">
+              <img
+                class="channel-icon"
+                src="http://unsplash.it/36/36?gravity-center"
+              />
+            </a>
+            <div class="video-details">
+              <a href="#" class="video-title">Video Title</a>
+              <a href="#" class="video-channel-name">Channel Name</a>
+              <div class="video-matadata">
+                <span>12k views</span>
+                •
+                <span>1 week ago</span>
+              </div>
+            </div>
+          </div>
+        </article>
         <article class="video-container">
           <a href="#" class="thumbnail">
             <img
