responsive problem to be solve

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="videos section.css" />
     <link
       href="http://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
@@ -58,7 +57,11 @@
       <div class="icons-right">
         <img src="./img/cam-icon.png" alt="cam-icon" />
         <img src="./img/bell-icon.png" alt="bell-icon" />
-        <img src="./img/user-icon.png" alt="user-icon" />
+        <img
+          src="./img/pp small.jpg"
+          alt="user-icon"
+          style="border-radius: 50%; width: 25px"
+        />
       </div>
     </header>
     <!-- Header Ends -->
@@ -104,7 +107,7 @@
           >
           <hr />
         </div>
-  
+
         <div class="subsd-list">
           <h3>Subscriptions</h3>
           <a href=""
@@ -141,6 +144,63 @@
           </a>
           <hr />
         </div>
+
+        <div class="explore-list">
+          <h3>Explore</h3>
+          <a href=""
+            ><img src="./img/Trending.png" />
+            <p>Trending</p>
+          </a>
+          <a href=""
+            ><img src="./img/Music.png" />
+            <p>Music</p>
+          </a>
+          <a href=""
+            ><img src="./img/gaming.png" />
+            <p>Gaming</p>
+          </a>
+          <a href=""
+            ><img src="./img/news.png" />
+            <p>News</p>
+          </a>
+          <a href=""
+            ><img src="./img/sport.png" />
+            <p>Sport</p>
+          </a>
+          <hr />
+        </div>
+
+        <div class="setting-list">
+          <a href=""
+            ><img src="./img/Setting.png" />
+            <p>Setting</p>
+          </a>
+          <a href=""
+            ><img src="./img/Report history.png" />
+            <p>Report history</p>
+          </a>
+          <a href=""
+            ><img src="./img/Help.png" />
+            <p>Help</p>
+          </a>
+          <a href=""
+            ><img src="./img/send feedback.png" />
+            <p>send feedback</p>
+          </a>
+          <hr />
+        </div>
+        <div class="misc-list">
+          <p>
+            About Press Copyright <br />
+            Contact us Creator Advertise Developers <br />
+
+            Terms Privacy Policy & Safety <br />
+            How YouTube works <br />
+            Test new features
+            <br /><br />
+            © 2023 Google LLC
+          </p>
+        </div>
       </div>
       <section class>
         <div class="categories">
@@ -162,12 +222,13 @@
         <div class="videos">
           <section class="video-section">
             <article class="video-container">
-              <a href="#" class="thumbnail">
-                <img
-                  class="thumbnail-image"
-                  src="http://unsplash.it/250/150?gravity-center"
-                />
-              </a>
+              <iframe
+                src="https://www.youtube.com/embed/xThs4Wm0cEY?si=R0Sb1d-6o494EiHk"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
               <div class="video-bottom-section">
                 <a href="#">
                   <img
@@ -187,12 +248,13 @@
               </div>
             </article>
             <article class="video-container">
-              <a href="#" class="thumbnail">
-                <img
-                  class="thumbnail-image"
-                  src="http://unsplash.it/250/150?gravity-center"
-                />
-              </a>
+              <iframe
+                src="https://www.youtube.com/embed/G3VtNKZxqps?si=d9QJ6CveHkU7JHm9"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
               <div class="video-bottom-section">
                 <a href="#">
                   <img
@@ -212,12 +274,15 @@
               </div>
             </article>
             <article class="video-container">
-              <a href="#" class="thumbnail">
-                <img
-                  class="thumbnail-image"
-                  src="http://unsplash.it/250/150?gravity-center"
-                />
-              </a>
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/9hkd6Sgb5tk?si=3k5WTjaKBxJ8Ci0I"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
               <div class="video-bottom-section">
                 <a href="#">
                   <img
@@ -237,12 +302,15 @@
               </div>
             </article>
             <article class="video-container">
-              <a href="#" class="thumbnail">
-                <img
-                  class="thumbnail-image"
-                  src="http://unsplash.it/250/150?gravity-center"
-                />
-              </a>
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/NIxTCOA1BLs?si=pMmyXD7rTOspBYxS"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
               <div class="video-bottom-section">
                 <a href="#">
                   <img
@@ -262,12 +330,15 @@
               </div>
             </article>
             <article class="video-container">
-              <a href="#" class="thumbnail">
-                <img
-                  class="thumbnail-image"
-                  src="http://unsplash.it/250/150?gravity-center"
-                />
-              </a>
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/llUPJ38oHjk?si=Kf6IWcCKpRLEVCZA"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
               <div class="video-bottom-section">
                 <a href="#">
                   <img
@@ -287,12 +358,15 @@
               </div>
             </article>
             <article class="video-container">
-              <a href="#" class="thumbnail">
-                <img
-                  class="thumbnail-image"
-                  src="http://unsplash.it/250/150?gravity-center"
-                />
-              </a>
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/VHehvIBWZpI?si=krtiYVUr_7ZcnxcH"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
               <div class="video-bottom-section">
                 <a href="#">
                   <img
@@ -312,12 +386,15 @@
               </div>
             </article>
             <article class="video-container">
-              <a href="#" class="thumbnail">
-                <img
-                  class="thumbnail-image"
-                  src="http://unsplash.it/250/150?gravity-center"
-                />
-              </a>
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/OrikNUnG2L4?si=YiLvQORE1elECmzV"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
               <div class="video-bottom-section">
                 <a href="#">
                   <img
@@ -337,12 +414,15 @@
               </div>
             </article>
             <article class="video-container">
-              <a href="#" class="thumbnail">
-                <img
-                  class="thumbnail-image"
-                  src="http://unsplash.it/250/150?gravity-center"
-                />
-              </a>
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/fW5ZQdJbjt8?si=atKGv8WPencToHDD"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
               <div class="video-bottom-section">
                 <a href="#">
                   <img
@@ -362,12 +442,15 @@
               </div>
             </article>
             <article class="video-container">
-              <a href="#" class="thumbnail">
-                <img
-                  class="thumbnail-image"
-                  src="http://unsplash.it/250/150?gravity-center"
-                />
-              </a>
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/3061yWIh9k8?si=J8C_Xrxs5HRbggM7"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
               <div class="video-bottom-section">
                 <a href="#">
                   <img
@@ -387,12 +470,15 @@
               </div>
             </article>
             <article class="video-container">
-              <a href="#" class="thumbnail">
-                <img
-                  class="thumbnail-image"
-                  src="http://unsplash.it/250/150?gravity-center"
-                />
-              </a>
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/MW8sFD3csFo?si=ifXE6XTjPlsZCtow"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
               <div class="video-bottom-section">
                 <a href="#">
                   <img
@@ -412,12 +498,15 @@
               </div>
             </article>
             <article class="video-container">
-              <a href="#" class="thumbnail">
-                <img
-                  class="thumbnail-image"
-                  src="http://unsplash.it/250/150?gravity-center"
-                />
-              </a>
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/LVN2wITh0Xg?si=Bx-Do7s5HGR3-25x"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
               <div class="video-bottom-section">
                 <a href="#">
                   <img
@@ -437,12 +526,15 @@
               </div>
             </article>
             <article class="video-container">
-              <a href="#" class="thumbnail">
-                <img
-                  class="thumbnail-image"
-                  src="http://unsplash.it/250/150?gravity-center"
-                />
-              </a>
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/DzKgaqe-hHc?si=c37usdtA9RGXj7cV"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
               <div class="video-bottom-section">
                 <a href="#">
                   <img
@@ -464,9 +556,8 @@
           </section>
         </div>
       </section>
-      
     </main>
-    
+
     <script src="./script.js"></script>
   </body>
 </html>
