--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         </div>
       </div>
       <div class="icons-right">
-        <img src="./img/cam-icon.png" alt="cam-icon" />
-        <img src="./img/bell-icon.png" alt="bell-icon" />
+        <img src="./img/cam-icon.png" class="img-cam" />
+        <img src="./img/bell-icon.png" class="img-bell" />
         <img
           src="./img/pp small.jpg"
           alt="user-icon"
